--- a/frontend/src/css/input.css
+++ b/frontend/src/css/input.css
@@ -1,11 +1,41 @@
-input {
+.input-field {
+  position: relative;
+}
+
+.input-field input{
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 1px solid;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
   cursor: pointer;
   transition: border-color 0.25s;
-  background-color: var(--normal-color);
+  background-color: var(--bg-color);
+  outline: none;
+}
+
+.input-field label{
+  position: absolute;
+  top: 50%;
+  left: 35px;
+  transform: translateY(-50%);
+  color: rgba(0, 0, 0, 0.394);
+  font-size: 19px;
+  pointer-events: none;
+  transition: .3s;
+}
+
+/* Cuando el campo tiene texto o placeholder no visible */
+input:focus,
+input:not(:placeholder-shown) {
+  border: 2px solid;
+}
+
+input:focus ~ label,
+input:not(:placeholder-shown) ~ label {
+  top: 0;
+  font-size: 16px;
+  padding: 0 5px;
+  background: var(--bg-color);
+  color: rgb(0, 0, 0);
 }
