--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,8 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
-  /* --bg-color: #f9fcf8; */
-  --bg-color: #222327;
+  --bg-color: #f9fcf8;
+  /* --bg-color: #222327; */
   --accept-color: #1fdf25;
   --normal-color: #e8f3e9;
   --text-color: #0e1b10;
