--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,7 +14,7 @@
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
   background-color: var(--bg-color);
@@ -28,4 +28,16 @@ body {
   left: 10px;
   transform: translateY(-50%);
   pointer-events: none;
+}
+
+a{
+  list-style: none;
+  text-decoration: none;
+  color: var(--text-color);
+}
+
+ul{
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
