--- a/frontend/src/css/register.css
+++ b/frontend/src/css/register.css
@@ -7,7 +7,8 @@
 }
 
 .register-container {
-    max-width: 400px;
+    width: 500px;
+    min-width: 300px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     padding: 1rem;
     border-radius: 10px;
@@ -23,4 +24,10 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+@media (width < 544px){
+    .register-container {
+        width: 250px;
+    }
 }
