--- a/frontend/src/css/home.css
+++ b/frontend/src/css/home.css
@@ -5,6 +5,7 @@
     padding-top: 25px;
     align-items: center;
     width: 100%;
+    gap: 40px;
 }
 
 .container-banner{
@@ -44,17 +45,17 @@
 .container-home .container-why{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     width: 75%;
+    gap: 10px
 }
 
-.container-home .container-why .title{
+.container-home .container-why .why-title{
     font-weight: 1000;
     font-size: 2rem;
     color: var(--text-color);
 }
 
-.container-home .container-why span{
+.container-home .container-why .why-body{
     font-size: 1rem;
     color: var(--text-color);
     text-align: justify;
@@ -63,31 +64,44 @@
 .container-home .container-features{
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
+    justify-content: space-between;
     width: 75%;
     gap: 20px;
+    min-height: 400px;
 }
 
 .feature{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
     width: 100%;
+    height: 100%;
+    cursor: pointer;
     gap: 10px;
 }
 
 .feature .feature-image{
     width: 100%;
-    height: 100%;
+    height: 200px;
     background-color: #ccc;
     border-radius: 10px;
+    object-fit: cover;
+    object-position: center;
+    overflow: hidden;
 }
 
 .feature .feature-image img{
     width: 100%;
     height: 100%;
+    border-radius: inherit;
+    object-fit: cover;
+    object-position: center;
+    transition: transform 0.5s;
+}
+
+.feature .feature-image img:hover{
+    transform: scale(1.1);
+    transition: transform 0.5s;
 }
 
 .feature .feature-title{
@@ -100,7 +114,7 @@
     font-weight: 500;
     font-size: 1rem;
     text-align: justify;
-    color: #a0a0a0
+    color: #a0a0a0;
 }
 
 
