--- a/frontend/src/css/profile.css
+++ b/frontend/src/css/profile.css
@@ -50,6 +50,7 @@
     align-items: center;
     width: 100%;
     height: 150px;
+    gap: 5px;
 }
 
 .profile-data-info .profile-data .profile-image{
@@ -59,7 +60,7 @@
 }
 
 .profile-data-info .profile-data .profile-image img{
-    width: auto;
+    width: 100%;
     height: 100%;
     border-radius: 50%;
 }
