--- a/frontend/src/css/profile.css
+++ b/frontend/src/css/profile.css
@@ -55,7 +55,7 @@
 
 .profile-data-info .profile-data .profile-image{
     text-align: center;
-    width: 25%;
+    width: 15%;
     height: 100%;
 }
 
@@ -68,7 +68,7 @@
 .profile-data-info .profile-data .profile-user{
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 60%;
 }
 
 .profile-data-info .profile-data .profile-user .profile-name{
@@ -149,7 +149,14 @@
 
 /* PROFILE EDIT */
 .imgEditProfile{
-    width: auto;
-    height: 25%;
+    width: 20%;
+    height: 20%;
     border-radius: 50%;
+    align-self: center;
+}
+
+.form-editProfile{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
