--- a/frontend/src/css/profile.css
+++ b/frontend/src/css/profile.css
@@ -153,6 +153,11 @@
     height: 20%;
     border-radius: 50%;
     align-self: center;
+    cursor: pointer;
+}
+
+.imgEditProfile:hover{
+    background-color: #e7e7e7;
 }
 
 .form-editProfile{
